test/corpus/functions.txt
===
Simple function with trivial body
===

module

function identity x =
  x

---


(source_file
  (module_declaration
    (module))
  (function_declaration
    (function)
    name: (identifier)
    (function_param
      (identifier))
    (eq)
    body: (value_expression
      (identifier))))


===
Simple function with multiple params
===

module

function fst x y z =
  x

---


(source_file
  (module_declaration
    (module))
  (function_declaration
    (function)
    name: (identifier)
    (function_param
      (identifier))
    (function_param
      (identifier))
    (function_param
      (identifier))
    (eq)
    body: (value_expression
      (identifier))))


===
Function with record pattern parameter
===

module

function pickX { x, y, z } =
  x

---


(source_file
  (module_declaration
    (module))
  (function_declaration
    (function)
    name: (identifier)
    (function_param
      (record_pattern
        (simple_record_key)
        (simple_record_key)
        (simple_record_key)))
    (eq)
    body: (value_expression
      (identifier))))
